--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -9,7 +9,7 @@
         "bUcvebn-BE5h",
         "MVTpgUuvCsg7"
       ],
-      "authorship_tag": "ABX9TyP2+b6jiAo4TK+idqXD00Dv",
+      "authorship_tag": "ABX9TyMEKsgv1NjLmJHZ4hQcK2NH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,7 @@
       "cell_type": "markdown",
       "source": [
         "This notebook will attempt at the implementation of psyTrack on WDIL data and especially the WDIL dataset WDIL0007 which are located in a shared folder.\n",
+        "Although this has been edited in colab it is not meant to be use in colab but rather to be run locally as a jupyter notebook as the data can be accessed through Scripps Network without long upload time.\n",
         "\n",
         "Important note: modification of the inuputs should enable analysis of other WDIL dataset\n",
         "\n",
@@ -86,7 +87,7 @@
         "# Preliminary setup\n",
         "\n",
         "Libraries listed below will need to be install.\n",
-        "In the original notebook the useage of oneibl was problematic for the first part of the paper was problematic. Those libraries and code focus mostly on implementation on the Rumbaugh lab data for comparison with the original colab see [here](https://tinyurl.com/PsyTrack-colab)"
+        "In the original notebook the useage of oneibl requires `pip install ibllib==1.4.7` as later version are not working. Those libraries and code focus mostly on implementation on the Rumbaugh lab data for comparison with the original colab see [here](https://tinyurl.com/PsyTrack-colab)"
       ],
       "metadata": {
         "id": "bUcvebn-BE5h"
@@ -103,8 +104,11 @@
         "import pandas as pd\n",
         "import glob\n",
         "import copy\n",
-        "import path\n",
         "import sys\n",
+        "\n",
+        "# to use onelight library like in the paper need to have the following call\n",
+        "!pip install ibllib==1.4.7\n",
+        "from oneibl.onelight import ONE\n",
         "\n",
         "# Install then import PsyTrack\n",
         "!pip install psytrack==2.0\n",
@@ -133,6 +137,43 @@
       ],
       "metadata": {
         "id": "mnEVKaVJCbn0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Retrieved published data\n",
+        "The data from the paper are located on the MillerRumbaughLab shared drive to facilitate the access as some of the preprocessing to access those has been done ahead of time and will save loading and preprocessing time consuming steps.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uVfT1Jir6vI7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## from the IBL mouse data - figure 3\n",
+        "ibl_data_path = tpath(r'Talks\\2022-01-13 - pillow\\Figures\\ibl-behavioral-data-Dec2019')\n",
+        "ibl_mouse_data_path = pd.read_csv(ibl_data_path+os.sep+\"ibl_processed.csv\")\n",
+        "MOUSE_DF = pd.read_csv(ibl_mouse_data_path)\n",
+        "mID = 'CSHL_003'\n",
+        "tmp = MOUSE_DF[MOUSE_DF['subject']=='CSHL_003'] \n",
+        "# tmp.to_csv(ibl_data_path+os.sep+'CSHL_003'+\"_ibl_processed.csv\")\n",
+        "\n",
+        "\n",
+        "## for the Rat DATA - figure 5 and after\n",
+        "SPATH=  tpath(r'Talks\\2022-01-13 - pillow\\TestData')\n",
+        "akrami_rat_data_path = tpath(r\"Talks\\2022-01-13 - pillow\\Brody_ratdata\\rat_behavior.csv\")\n",
+        "RAT_DF = pd.read_csv(akrami_rat_data_path)\n",
+        "RAT_DF = RAT_DF[RAT_DF[\"training_stage\"] > 2]  # Remove trials from early training\n",
+        "RAT_DF = RAT_DF[~np.isnan(RAT_DF[\"choice\"])]   # Remove mistrials\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZlR8MQMC7PGn"
       },
       "execution_count": null,
       "outputs": []
@@ -174,7 +215,7 @@
         "    sID = []\n",
         "    \n",
         "    for i in wdilFiles:\n",
-        "        # print(i)\n",
+        "        print(i)\n",
         "        tmp = pd.read_excel(i) # read excel file\n",
         "\n",
         "        ## section to check with previous id and assign absolute order number\n",
@@ -217,6 +258,13 @@
         "    ##      with held and was a no Go # if Go=0 and Correct =0 --> CorrectCat ==0 and is a hit\n",
         "    allDat['CorrectCat']  = allDat['choice'] + allDat['Correct?'] \n",
         "    allDat['hit'] = np.where((allDat['CorrectCat']==2) | (allDat['CorrectCat']==0),1,0)\n",
+        "\n",
+        "    ## those could be useful for modeling see\n",
+        "    ## comments on Figure F3b use of bias\n",
+        "    allDat['Go'] = allDat['Go/NoGo']\n",
+        "    allDat['NoGo'] = abs(allDat['Go/NoGo']-1)\n",
+        "\n",
+        "    return allDat\n",
         "\n",
         "def getRat(subject, first=20000, cutoff=50):\n",
         "\n",
@@ -268,7 +316,74 @@
         "    )\n",
         "    return dat\n",
         "\n",
-        "def convertToDict(allDat, subject, first=20000, cutoff=50):\n",
+        "def getMouse(subject, p=5):\n",
+        "    df = MOUSE_DF[MOUSE_DF['subject']==subject]   # Restrict data to the subject specified\n",
+        "    \n",
+        "    cL = np.tanh(p*df['contrastLeft'])/np.tanh(p)   # tanh transformation of left contrasts\n",
+        "    cR = np.tanh(p*df['contrastRight'])/np.tanh(p)  # tanh transformation of right contrasts\n",
+        "    inputs = dict(cL = np.array(cL)[:, None], cR = np.array(cR)[:, None])\n",
+        "\n",
+        "    dat = dict(\n",
+        "        subject=subject,\n",
+        "        lab=np.unique(df[\"lab\"])[0],\n",
+        "        contrastLeft=np.array(df['contrastLeft']),\n",
+        "        contrastRight=np.array(df['contrastRight']),\n",
+        "        date=np.array(df['date']),\n",
+        "        dayLength=np.array(df.groupby(['date','session']).size()),\n",
+        "        correct=np.array(df['feedbackType']),\n",
+        "        answer=np.array(df['answer']),\n",
+        "        probL=np.array(df['probabilityLeft']),\n",
+        "        inputs = inputs,\n",
+        "        y = np.array(df['choice'])\n",
+        "    )\n",
+        "    \n",
+        "    return dat\n",
+        "\n",
+        "def convertToDictRat(allDat, subject, first=20000, cutoff=50):\n",
+        "\n",
+        "    '''\n",
+        "    equivalent to the function getRat from the paper see above and here https://tinyurl.com/PsyTrack-colab\n",
+        "    '''\n",
+        "\n",
+        "    df = allDat[allDat['sID']==subject]  # restrict dataset to single subject\n",
+        "    df = df[:first] # restrict to \"first\" trials of data\n",
+        "    # # remove sessions with fewer than \"cutoff\" valid trials\n",
+        "    # df = df.groupby('session').filter(lambda x: len(x) >= cutoff)   \n",
+        "\n",
+        "    # Determine which trials do not have a valid previous trial (mistrial or session boundary)\n",
+        "    t = np.array(df[\"trial\"])\n",
+        "    prior = ((t[1:] - t[:-1]) == 1).astype(int)\n",
+        "    prior = np.hstack(([0], prior))\n",
+        "\n",
+        "    # Calculate previous correct answer\n",
+        "    h = (df[\"Correct?\"][:-1] * 2 - 1).astype(int)   # map from (0,1) to (-1,1)\n",
+        "    h = np.hstack(([0], h))\n",
+        "    h = h * prior  # for trials without a valid previous trial, set to 0\n",
+        "    \n",
+        "    # Calculate previous choice\n",
+        "    c = (df[\"choice\"][:-1] * 2 - 1).astype(int)   # map from (0,1) to (-1,1)\n",
+        "    c = np.hstack(([0], c))\n",
+        "    c = c * prior  # for trials without a valid previous trial, set to 0\n",
+        "    \n",
+        "    ## note here that it could be useful to have different stimulus values \n",
+        "    ## important to respect the dictionary psy.COLORS hence the name of the specific names of the inputs\n",
+        "    inputs = dict(s1 = np.array(df['Go/NoGo'])[:, None], \n",
+        "                  h = np.array(h)[:, None],\n",
+        "                  c = np.array(c)[:, None])\n",
+        "\n",
+        "    dat = dict(\n",
+        "        subject = subject,\n",
+        "        inputs = inputs,\n",
+        "        s1 = np.array(df['Go/NoGo']), # correspond to the go/noGo stim\n",
+        "        correct = np.array(df['hit']), # hit correspond to hit and correct rejection\n",
+        "        answer = np.array(df['Correct?']), #this is the answer \n",
+        "        y = np.array(df['choice']), #this correspond to the Lick\n",
+        "        dayLength=np.array(df.groupby(['session']).size()),\n",
+        "    )\n",
+        "\n",
+        "    return dat\n",
+        "\n",
+        "def convertToDictMouse(allDat, subject, first=20000, cutoff=50):\n",
         "\n",
         "    '''\n",
         "    equivalent to the function getRat from the paper see above and here https://tinyurl.com/PsyTrack-colab\n",
@@ -318,14 +433,52 @@
         "    mypath (str): path of the file of interest\n",
         "    shareDrive (str): windows letter of the shared folder\n",
         "    '''\n",
-        "    if sys.platform == 'linux':\n",
-        "        myRoot = '/run/user/1000/gvfs/smb-share:server=ishtar,share=millerrumbaughlab'\n",
+        "    if ('google.colab' in str(get_ipython())) or sys.platform == 'win32':\n",
+        "         myRoot = shareDrive+':'      \n",
         "    else:\n",
-        "        myRoot = shareDrive+':'\n",
+        "        myRoot = '/run/user/1000/gvfs/smb-share:server=ishtar,share=millerrumbaughlab'\n",
+        "\n",
         "\n",
         "    newpath = myRoot+os.sep+mypath\n",
         "\n",
-        "    return newpath\n"
+        "    return newpath\n",
+        "\n",
+        "def psyCompute(allDat, sID):\n",
+        "    fname = SPATH+os.sep+str(sID)+'_fig5b_data.npz'\n",
+        "\n",
+        "    ## either load or generate the data\n",
+        "    if glob.glob(fname) == [fname]:\n",
+        "        dat = np.load(fname, allow_pickle=True)['dat'].item()\n",
+        "    else:\n",
+        "        ## convert the data\n",
+        "        outData = convertToDictRat(allDat, sID)\n",
+        "        new_dat = psy.trim(outData, START=0, END=12500)\n",
+        "\n",
+        "        # here weights could be adjusted \n",
+        "        weights = {'bias': 1, 's1': 1, 'h': 1, 'c': 1}\n",
+        "        K = np.sum([weights[i] for i in weights.keys()])\n",
+        "        # hyper guess are kept with default value as in the paper\n",
+        "        hyper_guess = {\n",
+        "         'sigma'   : [2**-5]*K,\n",
+        "         'sigInit' : 2**5,\n",
+        "         'sigDay'  : [2**-4]*K,\n",
+        "          }\n",
+        "        optList = ['sigma', 'sigDay']\n",
+        "\n",
+        "        hyp, evd, wMode, hess_info = psy.hyperOpt(new_dat, hyper_guess, weights, optList)\n",
+        "\n",
+        "        dat = {'hyp' : hyp, 'evd' : evd, 'wMode' : wMode, 'W_std' : hess_info['W_std'],\n",
+        "               'weights' : weights, 'new_dat' : new_dat}\n",
+        "\n",
+        "        # Save interim result\n",
+        "        np.savez_compressed(SPATH+os.sep+str(sID)+'_fig5b_data.npz', dat=dat)\n",
+        "\n",
+        "        # save the figure\n",
+        "        fig = psy.plot_weights(dat['wMode'], dat['weights'], days=dat['new_dat'][\"dayLength\"], \n",
+        "                               errorbar=dat['W_std'], figsize=(4.75,1.4))\n",
+        "        # plt.xlabel(None); plt.ylabel(None)\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+str(sID)+ \"Fig5b.pdf\")"
       ],
       "metadata": {
         "id": "yzI1Ew69CwpG"
@@ -336,7 +489,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# WDIL data"
+        "# WDIL data retrieval"
       ],
       "metadata": {
         "id": "sA4RZwl9CzoF"
@@ -345,10 +498,95 @@
     {
       "cell_type": "code",
       "source": [
+        "### from Rumbaughlab\n",
+        "### with prior\n",
+        "#############################\n",
+        "\n",
+        "mypath = tpath(r'Sheldon\\All_WDIL\\WDIL007_SyngapKO_high_stim_1step_12-16-19\\forPsyTrack')\n",
+        "SPATH =  mypath+os.sep+'output'\n",
+        "os.makedirs(SPATH, exist_ok = True)\n",
+        "\n",
+        "## load or generate the data\n",
+        "if glob.glob(mypath+os.sep+'allDat.csv') == [mypath+os.sep+'allDat.csv']:\n",
+        "    allDat = pd.read_csv(mypath+os.sep+'allDat.csv')\n",
+        "else:\n",
+        "    allDat = formatWDILfile(mypath)\n",
+        "    allDat.to_csv(mypath+os.sep+'allDat.csv')\n",
+        "\n",
+        "## coding dat file\n",
+        "allDat = codingDatFile(allDat)\n",
+        "\n",
+        "## add genotype info to the file\n",
+        "geno = pd.read_csv(tpath(r\"Sheldon\\All_WDIL\\WDIL007_SyngapKO_high_stim_1step_12-16-19\\animals.csv\"))\n",
+        "allDat = pd.merge(allDat, geno, on ='sID')\n",
+        "\n",
+        "## adding the genotype to the dat file\n",
+        "## then as a first pass can split the file and process wt or het"
+      ],
+      "metadata": {
+        "id": "zfkSC77vhfxL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Test data WDIL007 sID 1753"
+      ],
+      "metadata": {
+        "id": "3z_FGuY2pcfR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "YCatw3F2DJGs"
+        "id": "G847i0J2yqqP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sID = 1753 #input the idname of the subeject\n",
+        "fname = SPATH+os.sep+str(sID)+'_fig5b_data.npz'\n",
+        "psyCompute(allDat, sID)"
+      ],
+      "metadata": {
+        "id": "XSM-Nm9wpq1j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Test data all WDIL007 - corresponding to Fig6"
+      ],
+      "metadata": {
+        "id": "Zb-5bPz3yg-s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_id = allDat['sID'].unique()\n",
+        "a = time.time()\n",
+        "for i, sID in enumerate(all_id):\n",
+        "    print(i, sID)\n",
+        "    try:\n",
+        "        psyCompute(allDat, sID)\n",
+        "    except:\n",
+        "        print('error with: ', sID)\n",
+        "b = time.time()\n",
+        "print(b-a)"
+      ],
+      "metadata": {
+        "id": "xUyNVM68ynUi"
       },
       "execution_count": null,
       "outputs": []
