--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -9,7 +9,7 @@
         "bUcvebn-BE5h",
         "MVTpgUuvCsg7"
       ],
-      "authorship_tag": "ABX9TyMEKsgv1NjLmJHZ4hQcK2NH",
+      "authorship_tag": "ABX9TyPL+dundxU7fOzUXrS7suwf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,6 +190,26 @@
     {
       "cell_type": "code",
       "source": [
+        "def listFiles(fpath):\n",
+        "    pathoutput = fpath + os.sep + 'fileList.csv'\n",
+        "    allFiles = set(glob.glob(fpath+'/**/*.xlsx', recursive=True)) # get all the excel file in folder\n",
+        "    settingFiles = set(glob.glob(fpath+'/**/settings.xlsx', recursive = True)) # get all the settings file\n",
+        "\n",
+        "    wdilFiles = allFiles - settingFiles # exclude the settings files\n",
+        "    wdilFiles = list(wdilFiles) # convert the set to a list\n",
+        "\n",
+        "    print('alllFiles: ', len(allFiles), ' wdilFiles: ', len(wdilFiles))\n",
+        "    print(wdilFiles)\n",
+        "\n",
+        "    # important to sort the list to obtain proper sequence \n",
+        "    wdilFiles.sort()\n",
+        "    wdilFiles = pd.DataFrame({'file': wdilFiles})\n",
+        "    wdilFiles.to_csv(pathoutput)\n",
+        "\n",
+        "\n",
+        "    return print(wdilFiles)\n",
+        "    return print('saved: ', pathoutput)\n",
+        "\n",
         "def formatWDILfile(path):\n",
         "    '''\n",
         "    Function to concatenate all the wdil file into one \n",
@@ -478,7 +498,102 @@
         "                               errorbar=dat['W_std'], figsize=(4.75,1.4))\n",
         "        # plt.xlabel(None); plt.ylabel(None)\n",
         "        # plt.subplots_adjust(0,0,1,1) \n",
-        "        plt.savefig(SPATH +os.sep+str(sID)+ \"Fig5b.pdf\")"
+        "        plt.savefig(SPATH +os.sep+str(sID)+ \"Fig5b.pdf\")\n",
+        "\n",
+        "def plot_all(all_labels, all_w, Weights, figsize):\n",
+        "    fig = plt.figure(figsize=figsize)\n",
+        "    Weights = [Weights] if type(Weights) is str else Weights\n",
+        "    avg_len=6000 # this needs to be truncated for the average for the array to have same dimensions\n",
+        "    for i, W in enumerate(Weights):\n",
+        "        print(i,W)\n",
+        "        avg = []\n",
+        "        for i in np.arange(0,len(all_w),1):\n",
+        "            print(i)\n",
+        "            bias_ind = np.where(all_labels[i] == W)[0][-1]\n",
+        "            bias_w = all_w[i][bias_ind]\n",
+        "            avg += [list(bias_w[:avg_len]) + [np.nan]*(avg_len - len(bias_w[:avg_len]))]\n",
+        "            colors = psy.COLORS\n",
+        "            plt.plot(bias_w, color=colors[W], alpha=0.2, lw=1, zorder=2+i)\n",
+        "        plt.plot(np.nanmean(avg, axis=0), color=colors[W], alpha=0.8, lw=2.5, zorder=5+i)\n",
+        "\n",
+        "    plt.axhline(0, color=\"black\", linestyle=\"--\", lw=1, alpha=0.5, zorder=1)\n",
+        "    plt.tight_layout()\n",
+        "    # plt.gca().spines['right'].set_visible(False)\n",
+        "    # plt.gca().spines['top'].set_visible(False)\n",
+        "    # plt.xlim(0, 6000)\n",
+        "    # plt.ylim(-2.5, 2.5)\n",
+        "    return fig\n",
+        "\n",
+        "def plotLabelsandW(geno, SPATH):\n",
+        "    '''\n",
+        "    this function will output all the labels and wheight for a givien genotype\n",
+        "    based on the corresponding files and select the genotype of interest\n",
+        "\n",
+        "    args:\n",
+        "    corresp(pd.DataFrame): data frame with file path sID and geno\n",
+        "    geno(str): geno of intrest either 'wt' or 'het'\n",
+        "    '''\n",
+        "    \n",
+        "    ## have the corresponding file generatede \n",
+        "    npzFiles = glob.glob(SPATH+os.sep+'*.npz')\n",
+        "    corresp = pd.DataFrame({'fname':npzFiles})\n",
+        "    corresp['sID'] = corresp['fname'].str.split(os.sep).str[-1].str.split('_').str[0].astype(int)\n",
+        "   \n",
+        "    ## check and implement the genotypes\n",
+        "    try: geno\n",
+        "    except: geno = None\n",
+        "    if geno is None:\n",
+        "        geno = pd.read_csv(os.sep.join(SPATH.split(os.sep)[:-2])+os.sep+'animals.csv')\n",
+        "\n",
+        "    corresp = pd.merge(corresp, geno, on='sID')\n",
+        "\n",
+        "    ## \n",
+        "    cWTorHet = corresp[corresp['geno']=='wt']\n",
+        "    \n",
+        "    all_labels = []\n",
+        "    all_w = []\n",
+        "\n",
+        "    for i,j in cWTorHet.iterrows():\n",
+        "        print(i,j)\n",
+        "        rat = np.load(j['fname'], allow_pickle=True)['dat'].item()\n",
+        "        \n",
+        "        labels = []\n",
+        "        for j in sorted(rat['weights'].keys()):\n",
+        "            labels += [j]*rat['weights'][j]\n",
+        "            \n",
+        "        all_labels += [np.array(labels)]\n",
+        "        all_w += [rat['wMode']] \n",
+        "\n",
+        "\n",
+        "    myFigsize = (3.6,1.8)\n",
+        "    plot_all(all_labels, all_w, [\"s1\"], myFigsize)\n",
+        "    plt.ylim(-1, 15)\n",
+        "    # plt.subplots_adjust(0,0,1,1) \n",
+        "    # plt.gca().set_yticks([-2,0,2])\n",
+        "    # plt.gca().set_xticklabels([])\n",
+        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6a.pdf\")\n",
+        "\n",
+        "    plot_all(all_labels, all_w, [\"bias\"], myFigsize)\n",
+        "    plt.ylim(-7, 2)\n",
+        "    # plt.gca().set_yticks([-2,0,2])\n",
+        "    # plt.gca().set_xticklabels([])\n",
+        "    # plt.gca().set_yticklabels([])\n",
+        "    # plt.subplots_adjust(0,0,1,1) \n",
+        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6b.pdf\")\n",
+        "\n",
+        "    plot_all(all_labels, all_w, [\"h\"], myFigsize)\n",
+        "    plt.ylim(-1, 1)\n",
+        "    # # plt.gca().set_yticklabels([])\n",
+        "    # plt.subplots_adjust(0,0,1,1) \n",
+        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6d.pdf\")\n",
+        "\n",
+        "\n",
+        "    plot_all(all_labels, all_w, [\"c\"], myFigsize)\n",
+        "    plt.ylim(-1, 1)\n",
+        "    # plt.gca().set_yticklabels([])\n",
+        "    # plt.gca().set_xticklabels([])\n",
+        "    # plt.subplots_adjust(0,0,1,1) \n",
+        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6e.pdf\")"
       ],
       "metadata": {
         "id": "yzI1Ew69CwpG"
@@ -537,17 +652,6 @@
       "metadata": {
         "id": "3z_FGuY2pcfR"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "G847i0J2yqqP"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
