--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -9,7 +9,7 @@
         "bUcvebn-BE5h",
         "MVTpgUuvCsg7"
       ],
-      "authorship_tag": "ABX9TyPL+dundxU7fOzUXrS7suwf",
+      "authorship_tag": "ABX9TyPZ/eaweU+O0O9mpTi6UrK3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,6 +190,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "def listFiles(fpath):\n",
         "    pathoutput = fpath + os.sep + 'fileList.csv'\n",
         "    allFiles = set(glob.glob(fpath+'/**/*.xlsx', recursive=True)) # get all the excel file in folder\n",
@@ -593,7 +594,7 @@
         "    # plt.gca().set_yticklabels([])\n",
         "    # plt.gca().set_xticklabels([])\n",
         "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6e.pdf\")"
+        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6e.pdf\")\n"
       ],
       "metadata": {
         "id": "yzI1Ew69CwpG"
@@ -608,6 +609,31 @@
       ],
       "metadata": {
         "id": "sA4RZwl9CzoF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1) generate a list of files for the experiment\n",
+        "\n",
+        "This list can then be edited while keeping the original data and will:\n",
+        "\n",
+        "\n",
+        "*   enable coding of missing data\n",
+        "*   add detail on experimental parameters of stimulation\n",
+        "  * phase (code for specific stimulus protocol to define)\n",
+        "\n",
+        "Also need:\n",
+        "\n",
+        "\n",
+        "*   list of genotypes named `animals.csv`\n",
+        "*   list of what animals met criteria \n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xdx092UjGet9"
       }
     },
     {
@@ -639,15 +665,41 @@
         "## then as a first pass can split the file and process wt or het"
       ],
       "metadata": {
-        "id": "zfkSC77vhfxL"
+        "id": "zfkSC77vhfxL",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 240
+        },
+        "outputId": "7fff193a-0ced-4816-f2d7-469daa2d3add"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-87f7a95dafef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#############################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmypath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'Sheldon\\All_WDIL\\WDIL007_SyngapKO_high_stim_1step_12-16-19\\forPsyTrack'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mSPATH\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mmypath\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'output'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSPATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexist_ok\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tpath' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Test data WDIL007 sID 1753"
+        "## 1) get data from csv file list"
+      ],
+      "metadata": {
+        "id": "m-El4uzoKr_4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Test data WDIL007 sID 1753"
       ],
       "metadata": {
         "id": "3z_FGuY2pcfR"
@@ -661,7 +713,7 @@
         "psyCompute(allDat, sID)"
       ],
       "metadata": {
-        "id": "XSM-Nm9wpq1j"
+        "id": "G847i0J2yqqP"
       },
       "execution_count": null,
       "outputs": []
